--- a/api-spec/extensions/sorting.fragment.yaml
+++ b/api-spec/extensions/sorting.fragment.yaml
@@ -44,5 +44,5 @@ components:
 
       example:
         - field: eo:cloud_cover
-        - field: provider
+        - field: providers
           direction: desc
