--- a/api-spec/extensions/query.fragment.yaml
+++ b/api-spec/extensions/query.fragment.yaml
@@ -30,7 +30,7 @@ components:
       example:
         eo:cloud_cover:
           lt: 50
-        provider: Planet
+        providers: Planet
         published:
           date: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
         pl:item_type:
