--- a/extensions/transaction/WFS3core+STAC+extensions.yaml
+++ b/extensions/transaction/WFS3core+STAC+extensions.yaml
@@ -924,7 +924,7 @@ components:
           title: Collection License Name
           type: string
           example: Apache-2.0
-        provider:
+        providers:
           type: array
           items:
             properties:
