--- a/api-spec/definitions/STAC-standalone.yaml
+++ b/api-spec/definitions/STAC-standalone.yaml
@@ -7,7 +7,7 @@ info:
     specification. Any service that implements this endpoint to allow search of
     spatiotemporal assets can be considered a STAC API. The endpoint is also
     available as an OpenAPI fragment that can be integrated with other OpenAPI
-    definitions, and is designed to slot seamless into a WFS 3 API definition.
+    definitions, and is designed to slot seamlessly into a WFS 3 API definition.
   contact:
     name: Cool Sat Corp
     email: info@cool-sat.com
@@ -31,7 +31,7 @@ paths:
         - STAC
       responses:
         '200':
-          description: A catalog json definition. Used as an entry point for a crawler.
+          description: A catalog JSON definition. Used as an entry point for a crawler.
           content:
             application/json:
               schema:
@@ -60,7 +60,7 @@ paths:
               schema:
                 type: string
         default:
-          description: An error occured.
+          description: An error occurred.
           content:
             application/json:
               schema:
@@ -69,9 +69,9 @@ paths:
               schema:
                 type: string
     post:
-      summary: Search STAC items by full-featured filtering.
+      summary: Search STAC items with full-featured filtering.
       description: >-
-        retrieve items matching filters.
+        Retrieve items matching filters.
         Intended as the standard, full-featured query API. This method is mandatory.
       operationId: postSearchSTAC
       tags:
@@ -92,7 +92,7 @@ paths:
               schema:
                 type: string
         default:
-          description: An error occured.
+          description: An error occurred.
           content:
             application/json:
               schema:
@@ -171,22 +171,12 @@ components:
         Either a date-time or a period string that adheres to RFC3339. Examples:
 
         * A date-time: "2018-02-12T23:20:50Z" 
-
-        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or
-
-        "2018-02-12T00:00:00Z/P1M6DT12H31M12S" 
-
+        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S" 
 
         Only features that have a temporal property that intersects the value
-        of 
-
-        `time` are selected. If a feature has multiple temporal properties, it
-        is
-
-        the decision of the server whether only a single temporal property is
-        used to 
-
-        determine the extent or all relevant temporal properties.
+        of `time` are selected. If a feature has multiple temporal properties, it
+        is the decision of the server whether only a single temporal property is
+        used to determine the extent or all relevant temporal properties.
       required: false
       schema:
         type: string
@@ -317,23 +307,13 @@ components:
 
 
         * A date-time: "2018-02-12T23:20:50Z"  
-
-        * A period:
-
-        "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or
-
-        "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
-
+        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
 
         Only features that have a temporal property that intersects the value of
-
         `time` are selected.
 
-
         If a feature has multiple temporal properties, it is the decision of the
-
         server whether only a single temporal property is used to determine the
-
         extent or all relevant temporal properties.
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
     catalogDefinition:
