Improved description where provider.url should link to as suggested by @simonff.

--- a/extensions/transaction/WFS3core+STAC+extensions.yaml
+++ b/extensions/transaction/WFS3core+STAC+extensions.yaml
@@ -941,7 +941,10 @@ components:
                   - host
                 example: producer
               url:
-                title: Organization homepage
+                title: Homepage
+                description: >-
+                  Homepage on which the provider describes the dataset and
+                  publishes contact information.
                 type: string
                 format: url
                 example: 'http://www.big-building.com'
