--- a/api-spec/WFS3core+STAC.yaml
+++ b/api-spec/WFS3core+STAC.yaml
@@ -501,13 +501,13 @@ components:
     catalogDefinition:
       type: object
       required:
-        - stac_version
+        - stacVersion
         - id
         - description
         - links
       additionalProperties: true
       properties:
-        stac_version:
+        stacVersion:
           type: string
           example: 0.6.0
         id:
@@ -722,7 +722,7 @@ components:
       required:
         - name
         - links
-        - stac_version
+        - stacVersion
         - id
         - description
         - license
@@ -768,7 +768,7 @@ components:
             type: string
           default:
             - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-        stac_version:
+        stacVersion:
           type: string
           example: 0.6.0
         id:
