--- a/extensions/transaction/WFS3core+STAC+extensions.yaml
+++ b/extensions/transaction/WFS3core+STAC+extensions.yaml
@@ -633,13 +633,13 @@ components:
     catalogDefinition:
       type: object
       required:
-        - stac_version
+        - stacVersion
         - id
         - description
         - links
       additionalProperties: true
       properties:
-        stac_version:
+        stacVersion:
           type: string
           example: 0.6.0
         id:
@@ -854,7 +854,7 @@ components:
       required:
         - name
         - links
-        - stac_version
+        - stacVersion
         - id
         - description
         - license
@@ -900,7 +900,7 @@ components:
             type: string
           default:
             - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-        stac_version:
+        stacVersion:
           type: string
           example: 0.6.0
         id:
