--- a/api-spec/definitions/STAC-collections.fragment.yaml
+++ b/api-spec/definitions/STAC-collections.fragment.yaml
@@ -28,7 +28,7 @@ components:
         version:
           title: Collection Version
           type: string
-          example: 1.0.0
+          example: 2018Q3
         license:
           title: Collection License Name
           type: string
