redefinend fields extension to allow filtering on any property in document

--- a/api-spec/STAC-query.yaml
+++ b/api-spec/STAC-query.yaml
@@ -34,7 +34,7 @@ paths:
         - STAC
       responses:
         '200':
-          description: A catalog json definition. Used as an entry point for a crawler.
+          description: A catalog JSON definition. Used as an entry point for a crawler.
           content:
             application/json:
               schema:
@@ -75,9 +75,9 @@ paths:
               schema:
                 type: string
     post:
-      summary: Search STAC items by full-featured filtering.
+      summary: Search STAC items with full-featured filtering.
       description: >-
-        retrieve items matching filters. Intended as the standard, full-featured
+        Retrieve items matching filters. Intended as the standard, full-featured
         query API. This method is mandatory.
       operationId: postSearchSTAC
       tags:
@@ -174,13 +174,14 @@ components:
       name: time
       in: query
       description: >
-        Either a date-time or a period string that adheres to RFC3339. Examples:
+        Either a date-time or a period string that adheres to RFC3339.
+        Examples:
 
-        * A date-time: "2018-02-12T23:20:50Z" 
-        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S" 
+        * A date-time: "2018-02-12T23:20:50Z"
+        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
 
-        Only features that have a temporal property that intersects the value
-        of `time` are selected. If a feature has multiple temporal properties, it
+        Only features that have a temporal property that intersects the value of
+        `time` are selected. If a feature has multiple temporal properties, it
         is the decision of the server whether only a single temporal property is
         used to determine the extent or all relevant temporal properties.
       required: false
@@ -339,12 +340,11 @@ components:
         Either a date-time or a period string that adheres to RFC 3339.
         Examples:
 
-        * A date-time: "2018-02-12T23:20:50Z"  
+        * A date-time: "2018-02-12T23:20:50Z"
         * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
 
-        Only features that have a temporal property that intersects the value of 
+        Only features that have a temporal property that intersects the value of
         `time` are selected.
-
 
         If a feature has multiple temporal properties, it is the decision of the
         server whether only a single temporal property is used to determine the
@@ -598,7 +598,7 @@ components:
               - asc
               - desc
       example:
-        - field: 'eo:cloud_cover'
+        - field: eo:cloud_cover
         - field: providers
           direction: desc
     fieldsFilter:
@@ -608,21 +608,14 @@ components:
         fields:
           $ref: '#/components/schemas/fields'
     fields:
-      description: >
-        The geometry member determines whether the geometry is populated or is
-        null. The
-
-        include and exclude members specify an array of property names that are
-        either 
-
-        included or excluded from the result, respectively. If both include and
-        exclude 
-
-        are specified, include takes precedence.
+      description: |
+        The include and exclude members specify an array of
+        property names that are either included or excluded
+        from the result, respectively. If both include and
+        exclude are specified, include takes precedence.
+        Values should include the full JSON path of the property.
       type: object
       properties:
-        geometry:
-          type: boolean
         include:
           type: array
           items:
@@ -631,6 +624,11 @@ components:
           type: array
           items:
             type: string
+      example:
+        include:
+          - 'id,properties.eo:cloud_cover'
+        exclude:
+          - 'geometry,properties.datetime'
 tags:
   - name: STAC
     description: Extension to WFS3 Core to support STAC metadata model and search API
