--- a/api-spec/WFS3core+STAC.yaml
+++ b/api-spec/WFS3core+STAC.yaml
@@ -34,7 +34,7 @@ paths:
         - STAC
       responses:
         '200':
-          description: A catalog json definition. Used as an entry point for a crawler.
+          description: A catalog JSON definition. Used as an entry point for a crawler.
           content:
             application/json:
               schema:
@@ -72,9 +72,9 @@ paths:
               schema:
                 type: string
     post:
-      summary: Search STAC items by full-featured filtering.
+      summary: Search STAC items with full-featured filtering.
       description: >-
-        retrieve items matching filters. Intended as the standard, full-featured
+        Retrieve items matching filters. Intended as the standard, full-featured
         query API. This method is mandatory.
       operationId: postSearchSTAC
       tags:
@@ -330,13 +330,14 @@ components:
       name: time
       in: query
       description: >
-        Either a date-time or a period string that adheres to RFC3339. Examples:
+        Either a date-time or a period string that adheres to RFC3339.
+        Examples:
 
-        * A date-time: "2018-02-12T23:20:50Z" 
-        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S" 
+        * A date-time: "2018-02-12T23:20:50Z"
+        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
 
-        Only features that have a temporal property that intersects the value
-        of `time` are selected. If a feature has multiple temporal properties, it
+        Only features that have a temporal property that intersects the value of
+        `time` are selected. If a feature has multiple temporal properties, it
         is the decision of the server whether only a single temporal property is
         used to determine the extent or all relevant temporal properties.
       required: false
@@ -467,7 +468,7 @@ components:
         Either a date-time or a period string that adheres to RFC 3339.
         Examples:
 
-        * A date-time: "2018-02-12T23:20:50Z"  
+        * A date-time: "2018-02-12T23:20:50Z"
         * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
 
         Only features that have a temporal property that intersects the value of
@@ -766,7 +767,7 @@ components:
         version:
           title: Collection Version
           type: string
-          example: 1
+          example: 2018Q3
         license:
           title: Collection License Name
           type: string
