--- a/api-spec/package.json
+++ b/api-spec/package.json
@@ -5,10 +5,9 @@
   "repository": "https://github.com/radiantearth/stac-spec",
   "license": "Apache-2.0",
   "scripts": {
-    "generate-standalone": "yaml-files definitions/STAC-standalone.yaml STAC-standalone.yaml",
-    "generate-query-ext": "yaml-files definitions/STAC-query.yaml STAC-query.yaml",
-    "generate-wfs": "yaml-files definitions/WFS3core+STAC.yaml WFS3core+STAC.yaml",
-    "generate-all": "npm run generate-standalone && npm run generate-wfs && npm run generate-query-ext"
+    "generate-full": "yaml-files STAC-full.merge.yaml STAC-full.yaml",
+    "generate-core": "yaml-files STAC-core.merge.yaml STAC-core.yaml",
+    "generate-all": "npm run generate-core && npm run generate-full"
   },
   "dependencies": {
     "yaml-files": "^1.1.0"
