--- a/api-spec/STAC-full.yaml
+++ b/api-spec/STAC-full.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: STAC core + extensions API
+  title: WFS3 core API
   version: 0.6.2
   description: >-
     This is an OpenAPI definition of the core SpatioTemporal Asset Catalog API
@@ -41,7 +41,7 @@ paths:
                 $ref: '#/components/schemas/catalogDefinition'
   /stac/search:
     get:
-      summary: Search STAC items by simple filtering.
+      summary: Search STAC items with simple filtering.
       description: >-
         Retrieve Items matching filters. Intended as a shorthand API for simple
         queries. This method is optional.
@@ -77,7 +77,7 @@ paths:
     post:
       summary: Search STAC items with full-featured filtering.
       description: >-
-        Retrieve items matching filters. Intended as the standard, full-featured
+        retrieve items matching filters. Intended as the standard, full-featured
         query API. This method is mandatory.
       operationId: postSearchSTAC
       tags:
@@ -333,8 +333,7 @@ components:
       name: time
       in: query
       description: >
-        Either a date-time or a period string that adheres to RFC3339.
-        Examples:
+        Either a date-time or a period string that adheres to RFC3339. Examples:
 
         * A date-time: "2018-02-12T23:20:50Z"  * A period:
         "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or
@@ -985,7 +984,7 @@ components:
               - asc
               - desc
       example:
-        - field: eo:cloud_cover
+        - field: 'eo:cloud_cover'
         - field: providers
           direction: desc
     fieldsFilter:
