--- a/api-spec/definitions/STAC-standalone.yaml
+++ b/api-spec/definitions/STAC-standalone.yaml
@@ -9,9 +9,8 @@ info:
     available as an OpenAPI fragment that can be integrated with other OpenAPI
     definitions, and is designed to slot seamlessly into a WFS 3 API definition.
   contact:
-    name: Cool Sat Corp
-    email: info@cool-sat.com
-    url: 'http://cool-sat.com/contact/'
+    name: STAC Specification
+    url: 'http://satspec.org'
   license:
     name: Apache License 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0'
@@ -341,6 +340,72 @@ components:
           example: Catalog of NAIP Imagery.
         links:
           $ref: '#/components/schemas/links'
+    collectionInfo:
+      type: object
+      required:
+        - stac_version
+        - id
+        - description
+        - license
+        - extent
+      properties:
+        stac_version:
+          type: string
+          example: 0.6.2
+        id:
+          description: 'identifier of the collection used, for example, in URIs'
+          type: string
+          example: buildings
+        keywords:
+          title: Keywords
+          type: array
+          items:
+            type: string
+            example:
+              - buildings
+              - properties
+              - constructions
+        version:
+          title: Collection Version
+          type: string
+          example: 2018Q3
+        license:
+          title: Collection License Name
+          type: string
+          example: Apache-2.0
+        providers:
+          type: array
+          items:
+            properties:
+              name:
+                title: Organization name
+                type: string
+                example: Big Building Corp
+              description:
+                title: Provider description
+                type: string
+                example: "No further processing applied."
+              roles:
+                title: Organization roles
+                type: array
+                items:
+                  type: string
+                  enum:
+                    - producer
+                    - licensor
+                    - processor
+                    - host
+                example: 
+                  - producer
+                  - licensor
+              url:
+                title: Homepage
+                description: >-
+                  Homepage on which the provider describes the dataset and
+                  publishes contact information.
+                type: string
+                format: url
+                example: http://www.big-building.com
     itemCollection:
       type: object
       required:
