References to some fragments were invalid - not sure why this didn't came up when regenerating for #432.

--- a/api-spec/openapi/STAC.merge.yaml
+++ b/api-spec/openapi/STAC.merge.yaml
@@ -1,1 +1,1 @@
-!!files_merge_append ["openapi-schema/WFS3.yaml", "openapi-schema/STAC.yaml"]
+!!files_merge_append ["openapi/WFS3.yaml", "openapi/STAC.yaml"]
