Fixing data type errors for include/exclude for fields, fixed path errors in merge file.

--- a/api-spec/extensions/fields/fields.fragment.yaml
+++ b/api-spec/extensions/fields/fields.fragment.yaml
@@ -43,7 +43,9 @@ components:
             type: string
       example:
         include:
-          - id,properties.eo:cloud_cover
+          - id
+          - 'properties.eo:cloud_cover'
         exclude:
-          - geometry,properties.datetime
+          - geometry
+          - properties.datetime
 
