--- a/api-spec/STAC+extensions.yaml
+++ b/api-spec/STAC+extensions.yaml
@@ -1006,9 +1006,11 @@ components:
             type: string
       example:
         include:
-          - 'id,properties.eo:cloud_cover'
+          - id
+          - 'properties.eo:cloud_cover'
         exclude:
-          - 'geometry,properties.datetime'
+          - geometry
+          - properties.datetime
 servers:
   - url: 'http://dev.cool-sat.com/'
     description: Development server
