Fixed small lint error reported by speccy.

--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -901,7 +901,7 @@ components:
           href: >-
             http://api.cool-sat.com/query/gasd312fsaeg/ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
 servers:
-  - url: 'http://dev.cool-sat.com/'
+  - url: 'http://dev.cool-sat.com'
     description: Development server
   - url: 'http://www.cool-sat.com'
     description: Production server
