--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -1061,7 +1061,7 @@ components:
           - geometry
           - properties.datetime
 servers:
-  - url: 'http://dev.cool-sat.com/'
+  - url: 'http://dev.cool-sat.com'
     description: Development server
   - url: 'http://www.cool-sat.com'
     description: Production server
