--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -736,7 +736,7 @@ components:
       description: Only returns items that intersect with the provided polygon.
       properties:
         intersects:
-          $ref: 'http://geojson.org/schema/Geometry.json'
+          $ref: 'https://stacspec.org/assets/Geometry.json'
     time:
       type: string
       description: >
@@ -832,7 +832,7 @@ components:
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
-          $ref: 'http://geojson.org/schema/Geometry.json'
+          $ref: 'https://stacspec.org/assets/Geometry.json'
         type:
           $ref: '#/components/schemas/itemType'
         properties:
