--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -705,7 +705,7 @@ components:
       description: Only returns items that intersect with the provided polygon.
       properties:
         intersects:
-          $ref: 'http://geojson.org/schema/Geometry.json'
+          $ref: 'https://stacspec.org/assets/Geometry.json'
     time:
       type: string
       description: >
@@ -801,7 +801,7 @@ components:
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
-          $ref: 'http://geojson.org/schema/Geometry.json'
+          $ref: 'https://stacspec.org/assets/Geometry.json'
         type:
           $ref: '#/components/schemas/itemType'
         properties:
