--- a/api-spec/extensions/transaction/transaction.fragment.yaml
+++ b/api-spec/extensions/transaction/transaction.fragment.yaml
@@ -146,7 +146,7 @@ components:
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
-          $ref: 'http://geojson.org/schema/Geometry.json'
+          $ref: 'https://stacspec.org/assets/Geometry.json'
         type:
           $ref: '#/components/schemas/itemType'
         properties:
