--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -349,7 +349,7 @@ components:
       description: Only returns items that intersect with the provided polygon.
       properties:
         intersects:
-          $ref: 'https://stacspec.org/assets/Geometry.json'
+          $ref: 'https://geojson.org/schema/Geometry.json'
     time:
       type: string
       description: >
@@ -508,7 +508,7 @@ components:
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
-          $ref: 'https://stacspec.org/assets/Geometry.json'
+          $ref: 'https://geojson.org/schema/Geometry.json'
         type:
           $ref: '#/components/schemas/itemType'
         properties:
