--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -683,7 +683,7 @@ components:
         - type: object
           properties:
             limit:
-              type: number
+              type: integer
               example: 10
     bbox:
       description: |
