--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -291,7 +291,7 @@ components:
         - type: object
           properties:
             limit:
-              type: number
+              type: integer
               example: 10
     bbox:
       description: |
