Transaction Extension Status Codes are more REST conventional

--- a/api-spec/extensions/transaction/transaction.fragment.yaml
+++ b/api-spec/extensions/transaction/transaction.fragment.yaml
@@ -1,6 +1,7 @@
 openapi: 3.0.1
 info:
   title: The SpatioTemporal Asset Catalog API + WFS3 + Transaction extension
+  version: 0.7.0
 paths:
   '/collections/{collectionId}/items':
     post:
@@ -19,7 +20,7 @@ paths:
                  - $ref: '#/components/schemas/item'
                  - $ref: '#/components/schemas/itemCollection'
       responses:
-        '200':
+        '201':
           description: Status of the create request.
           content:
             application/geo+json:
@@ -28,6 +29,10 @@ paths:
             text/html:
               schema:
                 type: string
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '503':
+          $ref: '#/components/responses/InternalServerError'
         default:
           description: An error occurred.
           content:
@@ -64,6 +69,12 @@ paths:
             application/json:
               schema:
                 type: string
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '503':
+          $ref: '#/components/responses/InternalServerError'
         default:
           description: An error occurred.
           content:
@@ -99,6 +110,12 @@ paths:
             application/json:
               schema:
                 type: string
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '503':
+          $ref: '#/components/responses/InternalServerError'
         default:
           description: An error occurred.
           content:
@@ -118,15 +135,14 @@ paths:
         - $ref: '#/components/parameters/collectionId'
         - $ref: '#/components/parameters/featureId'
       responses:
-        '200':
-          description: Status of the update request.
-          content:
-            text/html:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
+        '204':
+          description: Status of the delete request.
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '503':
+          $ref: '#/components/responses/InternalServerError'
         default:
           description: An error occurred.
           content:
@@ -167,6 +183,27 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/time'
+
+  responses:
+    NotFound:
+      description: The specified resource was not found
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/exception'
+    BadRequest:
+      description: The request was malformed or semantically invalid
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/exception'
+    InternalServerError:
+      description: The request was syntactically and semantically valid, but an error occurred while trying to act upon it
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/exception'
+
 tags:
   - name: Extensions
     description: >-
